Add paintings gallery data with 32 works

--- a/about.html
+++ b/about.html
@@ -3,26 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ANW — About</title>
+  <title>About — Andrew Newell Walther</title>
+  <meta name="description" content="About Andrew Newell Walther">
+  
+  <!-- Favicon -->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>☯️</text></svg>">
+  
   <link rel="stylesheet" href="style.css" />
+  
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6XGRYTSC23"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-6XGRYTSC23');
+  </script>
 </head>
 <body>
   <!-- Menu -->
-  <!-- Menu -->
-<div class="menu">
-  <button class="menu-trigger" aria-label="Open site menu">MENU</button>
-  <ul class="dropdown" role="menu">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="paintings.html">Paintings</a></li>
-    <li><a href="exhibitions.html">Exhibitions</a></li>
-    <li><a href="drawings.html">Drawings</a></li>
-    <li><a href="video.html">Video</a></li>
-    <li><a href="https://19933.biz/manhattanartcomic.html" target="_blank">🔗 Manhattan Art Comic</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
-  </ul>
-</div>
-
+  <div class="menu">
+    <button class="menu-trigger" aria-label="Open site menu">MENU</button>
+    <ul class="dropdown" role="menu">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="paintings.html">Paintings</a></li>
+      <li><a href="drawings.html">Drawings</a></li>
+      <li><a href="text.html">Text</a></li>
+      <li><a href="exhibitions.html">Exhibitions / CV</a></li>
+      <li><a href="video.html">Video</a></li>
+      <li><a href="https://19933.biz/manhattanartcomic.html" target="_blank">🔗 Manhattan Art Comic</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
 
   <!-- Header -->
   <header class="page-header">
@@ -48,7 +61,7 @@
         <p><strong>Roads Traveled:</strong><br>
           Bethel Palmer Knik Whittier: AK<br>
           I-5 》 I-70 》 I-80 》 I-90 》 I-15 》 I-40 》 I-95 》 I-75 》 … (USA)<br>
-          Yukon 1 》 Dease Hwy 》 BC-37 》 BC-16 》 “Carribou Connector” … (Canada)<br>
+          Yukon 1 》 Dease Hwy 》 BC-37 》 BC-16 》 "Carribou Connector" … (Canada)<br>
           县道/X151 》 552乡道/Y552 》 321国道/G321 … (China)<br>
           A13 》 A-4 》 A17 (Germany)<br>
           D1 》 E50 》 E65 … (Czech Republic)<br>
@@ -61,7 +74,7 @@
         <p><strong>:</strong></p>
         <ul>
           <li><em>I-5 S / I-5 N</em><br>INTERSTATE 5 NORTH & SOUTH — BC, WA, OR & CA<br>July 8, 2012 – Aug 16, 2016</li>
-         
+        </ul>
 
         <h3>☞ Contact</h3>
         <p>Email: <a href="mailto:Newell.pdx@gmail.com">Newell.pdx@gmail.com</a></p>
@@ -77,7 +90,8 @@
       <a class="social-btn" href="https://twitter.com/newellwalther" target="_blank" aria-label="Twitter">🐦</a>
       <a class="social-btn" href="https://wa.me/84339441925" target="_blank" aria-label="WhatsApp">💬</a>
     </div>
-    <p>© 2025 Walther. All rights reserved.</p>
+    <a href="contact.html#newsletter" class="newsletter-link">Newsletter</a>
+    <p>© 2025 Andrew Newell Walther. All rights reserved.</p>
   </footer>
 
   <script src="menu.js"></script>
