Major gallery improvements: zoom, pan, inquire button, mobile fixes

--- a/paintings.html
+++ b/paintings.html
@@ -49,8 +49,8 @@
   <button id="list-view-toggle">List View</button>
 
   <header>
-    <h1>Paintings</h1>
-    <p>Please enjoy this growing archive of works.</p>
+    <h1>P A I N T I N G S</h1>
+    <p>Andrew Newell Walther.</p>
   </header>
 
   <!-- GALLERY CONTAINER -->
