Update about page with new bio and links

--- a/about.html
+++ b/about.html
@@ -19,6 +19,75 @@
     gtag('js', new Date());
     gtag('config', 'G-6XGRYTSC23');
   </script>
+  
+  <style>
+    .about-container {
+      max-width: 800px;
+      margin: 2rem auto;
+      padding: 2rem;
+      text-align: left;
+    }
+
+    .about-text {
+      line-height: 1.8;
+    }
+
+    .about-text p {
+      margin-bottom: 1.5rem;
+    }
+
+    .about-text a {
+      color: #000;
+      text-decoration: underline;
+      font-weight: bold;
+    }
+
+    .about-text a:hover {
+      opacity: 0.7;
+    }
+
+    .cv-section {
+      margin-top: 3rem;
+      border-top: 1px solid #ccc;
+      padding-top: 2rem;
+    }
+
+    .cv-section h2 {
+      font-size: 1.5rem;
+      margin-bottom: 1.5rem;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .cv-section h3 {
+      font-size: 1.2rem;
+      margin-top: 2rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .cv-section p {
+      margin-bottom: 1rem;
+      line-height: 1.8;
+    }
+
+    .contact-btn {
+      display: inline-block;
+      margin-top: 2rem;
+      padding: 0.75rem 2rem;
+      background: #000;
+      color: #fff;
+      text-decoration: none;
+      border: 1px solid #000;
+      transition: all 0.3s;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .contact-btn:hover {
+      background: #fff;
+      color: #000;
+    }
+  </style>
 </head>
 <body>
   <!-- Menu -->
@@ -37,28 +106,39 @@
     </ul>
   </div>
 
-  <!-- Header -->
   <header class="page-header">
     <h1>About</h1>
   </header>
 
-  <!-- Main -->
   <main>
     <section class="about-container">
-      <div class="about-photo">
-        <img src="images/portrait_bw.png" alt="A. Newell Walther Portrait">
-      </div>
       <div class="about-text">
         <p>
-          <strong>Andrew Newell Walther</strong> (b. 1993) is an American artist from Alaska. 
-          He is multidisciplinary, with a primary focus on painting, and presently works from a studio 
-          at the banks of the Saigon River.
+          Andrew Newell Walther (b.1993) is an American artist from the great state of Alaska. He is multidisciplinary, with a primary focus on painting. His work is very good and you would be a fool not to at least consider collecting it. His prices are as low now as they ever will be, so inquire right away.
         </p>
 
-        <h2>Curriculum Vitae</h2>
+        <p>
+          The son of Mormons and the oldest of seven children, Walther grew up in Alaska and there allowed its indescribable beauty to seep into his spirit. There he was, going to church with his family, singing in choir and flying around in little airplanes until his teenage years, when he first went to a boarding school of Scientologists and then became the greatest hitchhiker of his generation, living homeless and wandering around America for many years. He would go on to inspire many others to hitchhike and seek from the road whatever it might provide them. Some of those people have unfortunately died.
+        </p>
 
-        <h3>☞ Hitchhiking</h3>
-        <p><strong>Roads Traveled:</strong><br>
+        <p>
+          Eventually, he came off of the filthy street and forayed into the much cleaner worlds of construction management, law and <a href="https://www.youtube.com/watch?v=R6pLldbqIHM" target="_blank" rel="noopener">politics</a>. It was in these fields that he demonstrated himself further as fitting nowhere in this wide world.
+        </p>
+
+        <p>
+          Later, because of his cat who also has since died, he would move to Ho Chi Minh City in Vietnam, where he now resides, working from a <a href="https://www.instagram.com/a.lat.xca/" target="_blank" rel="noopener">modified slum-house</a> studio built on stilts at the banks of the Saigon River. It was there, under the glorious tropical sunset, invasive water hyacinth clustering with floating plastics all around him, that he wrote this bio.
+        </p>
+
+        <p>
+          He is an affiliate of the now-defunct <a href="https://www.discogs.com/label/718824-Psalmus-Diuersae" target="_blank" rel="noopener">Psalmus Diuersae</a>, and makes the <a href="https://manhattanartreview.com/manhattanartcomic.html" target="_blank" rel="noopener">Manhattan Art Comic</a> for the Manhattan Art Review.
+        </p>
+      </div>
+
+      <div class="cv-section">
+        <h2>Hitchhiking Curriculum Vitae</h2>
+
+        <h3>☞ Selected Roads Travelled:</h3>
+        <p>
           Bethel Palmer Knik Whittier: AK<br>
           I-5 》 I-70 》 I-80 》 I-90 》 I-15 》 I-40 》 I-95 》 I-75 》 … (USA)<br>
           Yukon 1 》 Dease Hwy 》 BC-37 》 BC-16 》 "Carribou Connector" … (Canada)<br>
@@ -71,19 +151,17 @@
         <h3>☞ From Alaska → Ho Chi Minh City</h3>
 
         <h3>☞ Performance</h3>
-        <p><strong>:</strong></p>
-        <ul>
-          <li><em>I-5 S / I-5 N</em><br>INTERSTATE 5 NORTH & SOUTH — BC, WA, OR & CA<br>July 8, 2012 – Aug 16, 2016</li>
-        </ul>
+        <p>
+          <em>I-5 S / I-5 N</em><br>
+          INTERSTATE 5 NORTH & SOUTH — BC, WA, OR & CA<br>
+          July 8, 2012 – Aug 16, 2016
+        </p>
 
-        <h3>☞ Contact</h3>
-        <p>Email: <a href="mailto:Newell.pdx@gmail.com">Newell.pdx@gmail.com</a></p>
-
+        <a href="contact.html" class="contact-btn">Contact</a>
       </div>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
     <div class="social-buttons footer-social">
       <a class="social-btn" href="https://instagram.com/newellwalther" target="_blank" aria-label="Instagram">📷</a>
